[Password Manager] Values cached on page can be username

Since https://chromium-review.googlesource.com/c/chromium/src/+/610080, if there is user input in form's fields, the fields without user input are ignored. It is not correct if the username is cached on page and the password typed by user.

In this CL, non-passwords field w/o user input are ignored iff there are non-password (!) fields with user input.

Bug: 784268
Change-Id: I4cdfc1af6d5d0823df95e5315934f3b4c25268fb